--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2024.08.1 Configuration
+# Buildroot 2024.08.1-3-g3970122a12-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -556,7 +556,7 @@ BR2_TARGET_TZ_INFO=y
 BR2_TARGET_TZ_ZONELIST="default"
 BR2_TARGET_LOCALTIME="Europe/Warsaw"
 BR2_ROOTFS_USERS_TABLES=""
-BR2_ROOTFS_OVERLAY="../rpizero-linux/overlay"
+BR2_ROOTFS_OVERLAY="../buildroot-pizero-overlay"
 BR2_ROOTFS_PRE_BUILD_SCRIPT=""
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/raspberrypi0/post-build.sh"
 BR2_ROOTFS_POST_FAKEROOT_SCRIPT=""
